Fix design and performance issues with task board - Fix overflow issues with task board - Fix design issue with issue link - Add lazy rendering to all tooltips

--- a/app/styles/components/task-board.scss
+++ b/app/styles/components/task-board.scss
@@ -1,3 +1,8 @@
+.task-board-body {
+  background-size: cover;
+  overflow: hidden;
+}
+
 .task-board-container {
   display: flex;
   flex-grow: 1;
